--- a/trangchu.html
+++ b/trangchu.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="header__profile">Trang chủ</div>
         <div class="header__group">
-            <div class="header__group-item"><a href="http://127.0.0.1:5500/H-LINH/gioithieu/gioithieu.html">giới thiệu</a></div>
+            <div class="header__group-item"><a href="https://h-linh0202.github.io/gioithieu/gioithieu.html">giới thiệu</a></div>
             <div class="header__group-item"><a href="https://h-linh0202.github.io/sign_up/sign_up.html  ">đăng ký</a></div>
             <div class="header__group-item"><a href="https://h-linh0202.github.io/login/login.html">đăng nhập</a></div>
             <div class="header__group-item"><a href="">thành viên</a>
